0031884: Data Exchange - NULL de-reference within STEPCAFControl_Reader::SetSourceCodePage()

Removed methods with unclear usage rules.